Replace boxed primitive constuctors that are now depreciated.